--- a/tex/MathsNotesBase.tex
+++ b/tex/MathsNotesBase.tex
@@ -168,6 +168,8 @@
 \newcommand{\congruent}[2]{\equiv #1 \modulo{#2}}
 \newcommand{\conj}[1]{\overline{#1}}
 \newcommand{\modulus}[1]{\abs{#1}} % semantic alias of \abs for complex conjugate
+\newcommand{\ImPart}{\operatorname{Im}}
+\newcommand{\RePart}{\operatorname{Re}}
 
 
 \newcommand*{\V}[1]{\vec{\bm{#1}}}
